# foscar-virtual-environment-autonomous-driving-competition-2023

./: README.md
convert_lidar/src/: convert_lidar.cpp
lidar_cam_fusion/src/: lidar_cam_fusion.py
mpc/: CMakeLists.txt  package.xml
mpc/src/: mpc.py  mpc_path_tracking.py  utils.py
object_detection/: CMakeLists.txt  package.xml
object_detection/cfg/: hyper_parameter.cfg
object_detection/launch/: object_detection.launch
object_detection/rviz/: object_detection.rviz
object_detection/src/: header.h  object_detection.cpp
path_maker/path/: tmp.txt
path_maker/src/: path_maker.py
wecar_ros/launch/: wecar_planner.launch
wecar_ros/scripts/: utils.py  wecar_planner.py
